--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,13 @@ p {
   flex-shrink: 0;
   border-bottom: 1px solid #e7e9fc;
 }
+.header-container {
+  display: flex;
+}
+.header-navigation {
+  display: flex;
+  align-items: center;
+}
 img {
   display: block;
   max-width: 100%;
@@ -75,7 +82,7 @@ img {
   color: #404bbf;
 }
 .nav-menu {
-  display: inline-flex;
+  display: flex;
   align-items: flex-start;
   gap: 40px;
   flex-grow: 1;
@@ -88,11 +95,12 @@ img {
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
+  padding: 24px 0;
 }
 
 .address-list {
   font-style: normal;
-  display: inline-flex;
+  display: flex;
   align-items: flex-end;
   gap: 40px;
   flex-grow: 1;
@@ -136,7 +144,9 @@ img {
 .baner-button {
   cursor: pointer;
   background-color: #4d5ae5;
-  display: inline-flex;
+  border: none;
+  display: block;
+  height: 56px;
   padding: 16px 32px;
   align-items: flex-start;
   gap: 10px;
@@ -161,11 +171,25 @@ img {
 .features-container {
   background-color: #ffffff;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .features-list {
   display: flex;
-  width: calc((100% - 3 * 24px) / 4);
   align-items: flex-start;
-  gap: 8px;
+  gap: 24px;
+}
+.features-list-content {
+  width: calc((100% - 3 * 24px) / 4);
 }
 .features-title {
   font-size: 20px;
@@ -173,6 +197,7 @@ img {
   line-height: 1.2; /* 120% */
   letter-spacing: 0.4px;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .features-content {
@@ -201,7 +226,7 @@ img {
   letter-spacing: 0.72px;
   text-transform: capitalize;
   color: #2e2f42;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .team-card {
@@ -210,11 +235,12 @@ img {
   padding-bottom: 32px;
   flex-direction: column;
   gap: 32px;
-  border-radius: 4px;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-member-info {
   gap: 8px;
+  padding: 32px 0;
 }
 .team-cards-title {
   text-align: center;
@@ -223,6 +249,7 @@ img {
   line-height: 1.2; /* 120% */
   letter-spacing: 0.4px;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-cards-content {
@@ -246,7 +273,7 @@ img {
   letter-spacing: 0.72px;
   text-transform: capitalize;
   color: #2e2f42;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .portfolio-cards-list {
@@ -274,7 +301,7 @@ img {
   letter-spacing: 0.4px;
   color: #2e2f42;
 }
-.row-1 {
+.row {
   margin-bottom: 48px;
 }
 .portfolio-cards-info {
@@ -285,6 +312,8 @@ img {
   align-items: flex-start;
   gap: 8px;
   align-self: stretch;
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
 }
 .portfolio-cards-content {
   font-size: 16px;
@@ -297,6 +326,7 @@ img {
 .footer-container {
   background-color: #2e2f42;
   height: 312px;
+  padding: 100px 0;
   flex-shrink: 0;
 }
 
@@ -309,9 +339,10 @@ img {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
-  display: inline-flex;
   align-items: center;
   padding-top: 100px;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo-part {
   color: #f4f4fd;
