--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ p {
 }
 .header-container {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .header-navigation {
   display: flex;
@@ -64,11 +66,9 @@ img {
   line-height: 1.17; /* 116.667% */
   letter-spacing: 0.54px;
   display: inline-block;
-  height: 24px;
   align-items: center;
   flex-shrink: 0;
   margin-right: 76px;
-  padding-top: 24px;
 }
 
 .logo-part {
@@ -88,6 +88,7 @@ img {
   flex-grow: 1;
 }
 .nav-link {
+  display: block;
   color: currentColor;
   text-decoration: none;
   color: #2e2f42;
@@ -137,7 +138,7 @@ img {
   font-weight: 700;
   line-height: 1.07; /* 107.143% */
   letter-spacing: 0.02em;
-  padding-bottom: 48px;
+  margin-bottom: 48px;
   max-width: 496px;
 }
 
@@ -231,11 +232,8 @@ img {
 
 .team-card {
   background-color: #ffffff;
-  display: inline-flex;
-  padding-bottom: 32px;
-  flex-direction: column;
-  gap: 32px;
   border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 3 * 24px) / 4);
 }
 
 .team-member-info {
@@ -284,16 +282,7 @@ img {
   row-gap: 48px;
 }
 .portfolio-cards {
-  background-color: #ffffff;
-  display: flex;
-  width: 360px;
-  height: 420px;
-  padding-bottom: 32px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
-  flex-shrink: 0;
-  border: 1px solid #e7e9fc;
+  width: calc((100% - 2 * 24px) / 3);
 }
 .portfolio-cards-title {
   font-size: 20px;
@@ -304,13 +293,6 @@ img {
   margin-bottom: 8px;
 }
 .portfolio-cards-info {
-  display: flex;
-  padding: 0px 16px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 8px;
-  align-self: stretch;
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
@@ -325,9 +307,7 @@ img {
 
 .footer-container {
   background-color: #2e2f42;
-  height: 312px;
   padding: 100px 0;
-  flex-shrink: 0;
 }
 
 .footer-logo {
@@ -340,7 +320,6 @@ img {
   text-transform: uppercase;
   text-decoration: none;
   align-items: center;
-  padding-top: 100px;
   display: inline-block;
   margin-bottom: 16px;
 }
